fixed heading and button alignment

--- a/frontend/src/css/container/Card.css
+++ b/frontend/src/css/container/Card.css
@@ -1,6 +1,7 @@
 .custom-card {
     position: relative;
     margin: 20px 0 20px 0;
+    text-align: left;
 }
 
 .custom-button {
@@ -8,7 +9,6 @@
     text-align: left;
     position: absolute !important;
     bottom: 0;
-    left: 10px;
 }
 
 .image-card {
